--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "sweetalert-react": "^0.4.11"
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
