--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.2.0",
     "sweetalert": "^2.1.2",
     "use-position": "0.0.6"
